[project]
name = "deepcoil"
version = "2.0.3"
requires-python = ">=3.7,<3.9"
description = "Fast and accurate prediction of coiled coil domains in protein sequences"
authors = [
  {name = "Jan Ludwiczak", email = "j.ludwiczak@cent.uw.edu.pl"}
]
readme = "README.md"
license = {text = "MIT License"}
dependencies = [
  "biopython==1.79",
  "allennlp==0.9.0",
  "tensorflow-gpu==2.11",
  "torch==1.13.1",
  "overrides==3.1.0",
  "pandas",
  "seaborn",
]

[project.scripts]
deepcoil = "deepcoil.run_deepcoil:main"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"*" = ["*.h5", "*.json"]
